# LLMOPS

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  test.py
.github/workflows/: aws.yml  task_defination.json
multi_doc_chat/config/: config.yaml
multi_doc_chat/logger/: __init__.py  cutom_logger.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: document_ops.py  model_loader.py
notebook/: RAG.ipynb  evaluation.ipynb  experiments.ipynb
