[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.123.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-experimental>=0.4.0",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langsmith>=0.4.49",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pypdf>=6.4.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "rapidocr-onnxruntime>=1.4.4",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
